# src/routes/students.router.js
@@ -4,8 +4,6 @@ const studentsController = require('../controllers/students.controller');
 
 const router = new Router();
 
-router.get('/', (_, res) => res.send('patients'));
-
 router.post('/create', studentsController.createStudent);
 router.post('/delete', studentsController.deleteStudent);
 router.post('/modify', studentsController.modifyStudent);
