# src/routes/test.router.js
@@ -6,6 +6,6 @@ const router = new Router();
 
 router.post('/start', testController.startTest);
 router.post('/answerQuestion', testController.answerQuestion);
-// TODO: router.post('/get/:id', testController.getTestById);
+router.post('/finishTest', testController.finishTest);
 
 module.exports = router;
